Consertando Aria role issue

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-  <div id="card-container">
+  <main role="main" id="card-container">
     <img src="images/illustration-hero.svg" alt="">
     <h1>Order Summary</h1>
 
@@ -55,7 +55,7 @@
         Cancel Order
       </a>
     </p>
-  </div>
+  </main>
   <footer>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/Jorge-William">Jorge William</a>.
