--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-  <main role="main" id="card-container">
+  <main id="card-container">
     <img src="images/illustration-hero.svg" alt="">
     <h1>Order Summary</h1>
 
