--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <div id="icon-value-plan">
           <img id="music-icon" src="./images/icon-music.svg" alt="Music icon" />
           <div id="plan-value">
-            <p id="annual-plan-text">
+            <h2 id="annual-plan-text">
               Annual Plan
-            </p>
+            </h2>
             <span id="value-yearly">
               $59.99/year
             </span>
